--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     implementation("javax.servlet:javax.servlet-api:4.0.1")
     implementation("javax.servlet:jstl:1.2")
 
+    implementation('com.google.code.gson:gson:2.9.0')
+
     api('com.google.protobuf:protobuf-java:3.18.0')
 }
 
